--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="jot_down">记录</string>
     <string name="font_mono">monospace</string>
     <string name="blank" />
+    <string name="copy_to_clipboard">复制到剪贴板</string>
+    <string name="delete_this_message">删除这条记录</string>
+    <string name="copy_to_clipboard_success">成功复制到剪贴板</string>
 </resources>
